--- a/scans/BACpypes_scan.ini
+++ b/scans/BACpypes_scan.ini
@@ -1,7 +1,8 @@
 [scan_information]
-# list all the ip addresses and separate with space, if want a broadcast whois, leave it empty
-IP_Address: 192.168.1.112
+# list all the ip addresse:s and separate with space, if want a broadcast whois, leave it empty
+IP_Address:
 # sleep time every time after the bacnet command
 sleepTime: 1
+timer: 1
 filename: deviceList.json
 
